--- a/style.css
+++ b/style.css
@@ -2,21 +2,105 @@ body {
 	font: Verdana;
 	font-size: 40px;
 	color: #4D2C03;
+	margin:0px;
+	padding:0px;
 }
-
 #section1 {
-    position: relative;
-    height: 330px;
+    height: 550px;
     text-align: center;
     background-color: #B2D3FC;
-    border-radius: 25px;
+		border-bottom-width: medium;
+		border-bottom-style: solid;
+		border-bottom-color: #4D2C03;
+		display: flex;
+		flex-direction: column;
+}
+#square {
+	height:100px;
+	width: 100px;
+	background-color: #4D2C03;
+	margin: auto;
+	flex: 0 1 auto;
+}
+#name {
+	margin: auto;
+	flex: 0 2 auto;
+
+}
+
+.nav {
+	display: flex;
+	flex: 0 3 auto;
+
+}
+
+
+.nav ul{
+	list-style-type: none;
+	width: 100%;
+	background-color: #4D2C03;
+	display: flex;
+	flex-direction: row;
+	align-self: flex-end;
+}
+.nav li {
+	display: inline;
+	flex: 20%;
+}
+
+.nav li a {
+	text-decoration: none;
+	color: #B2D3FC;
+	padding: 0px 130px;
+
+}
+li a:hover {
+    background-color: #B2D3FC;
+    color: white;
 }
 
 #section2 {
     position: relative;
     height: 500px;
     text-align: center;
+		border-bottom-width: medium;
+		border-bottom-style: solid;
+		border-bottom-color: #4D2C03;
 }
+#section2 p {
+	margin: 140px 0px;
+}
+
+
+
+#section3 {
+    position: relative;
+    height: 500px;
+    text-align: center;
+		border-bottom-width: medium;
+		border-bottom-style: solid;
+		border-bottom-color: #4D2C03;
+}
+#section3 p {
+	margin: 140px 0px;
+}
+
+
+#section4 {
+    position: relative;
+    height: 500px;
+    text-align: center;
+		border-bottom-width: medium;
+		border-bottom-style: solid;
+		border-bottom-color: #4D2C03;
+}
+#section4 p {
+	margin: 140px 0px;
+}
+
+
+
+
 
 .text {
     position: absolute;
@@ -31,7 +115,7 @@ body {
 
 /*Begin map section */
 
-#section3 {
+#section5 {
     position: relative;
     margin-top: 20px;
 }
@@ -68,85 +152,3 @@ body {
  }
 
 /*End map section */
-
-/*Begin favorites section*/
-
-#section4 {
-    text-align: center;
-    border-radius: 25px;
-    margin-top: 80px;
-}
-
-#favintro {
-    height: 140px;
-    margin: 10px;
-    margin-bottom: 70px;
-    border-radius:25px;
-    font-weight: bold;
-}
-
-.container {
-    display: inline-block;
-    height: 370px;
-    width: 100%;
-    margin: 10px;
-    border-radius: 25px;
-    margin-bottom: 50px;
-}
-
-.description {
-    display: inline-block;
-    background-color: #B2D3FC;
-    height:200px;
-    width: 30%;
-    float: left;
-    margin-top: 100px;
-    margin-left: 50px;
-    border-radius: 25px;
-    font-weight: bold;
-}
-
-.pictures {
-    display: inline-block;
-    height:475px;
-    width: 60%;
-    float: right;
-    border-radius:25px;
-}
-
-.left {
-    float: left;
-    width:40%;
-    margin-left: 30px;
-    margin-top: 10px;
-    border-radius:25px;
-}
-
-.right {
-    float: right;
-    width: 40%;
-    margin-right: 30px;
-    margin-top: 10px;
-    border-radius:25px;
-}
-
-#musicpic {
-    margin-top: 70px;
-}
-
-/* End favorites section */
-
-#section5 {
-    position: relative;
-    height: 385px;
-    text-align: center;
-    background-color: #B2D3FC;
-    border-radius: 25px;
-    margin-top: 100px;
-}
-
-#section6 {
-    height: 150px;
-    text-align: center;
-    font-weight: bold
-}
